--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/icons/moneysack.ico" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/icons/moneysack32x32.png" />
-    <link rel="icon" type="image/png" sizes="64x64" href="/icons/moneysack64x64.png" />
-    <link rel="apple-touch-icon" href="/icons/moneysack256_256.png" />
+    <link rel="icon" type="image/x-icon" href="%BASE_URL%icons/moneysack.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%BASE_URL%icons/moneysack32x32.png" />
+    <link rel="icon" type="image/png" sizes="64x64" href="%BASE_URL%icons/moneysack64x64.png" />
+    <link rel="apple-touch-icon" sizes="256x256" href="%BASE_URL%icons/moneysack256_256.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>scaffold-svelte</title>
   </head>
